syntax = "proto3";

package ai.metathings.service.deviced;

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message PatchConfigRequest {
	OpConfig config = 1 [(validator.field) = {msg_exists: true}];
}

message PatchConfigResponse {
	Config config = 1;
}
